Matrix.cppresult.txt
In file included from cur.cpp:16:0:
antonov/Matrix.cpp: In member function 'Matrix Matrix::reverse()':
antonov/Matrix.cpp:308:11: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
    result = result.transpose();
           ^
antonov/Matrix.cpp:308:11: note: candidate is:
antonov/Matrix.cpp:87:10: note: Matrix& Matrix::operator=(Matrix&)
  Matrix& operator = (Matrix& A)
          ^
antonov/Matrix.cpp:87:10: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
antonov/Matrix.cpp:309:11: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
    result = result * det;
           ^
antonov/Matrix.cpp:309:11: note: candidate is:
antonov/Matrix.cpp:87:10: note: Matrix& Matrix::operator=(Matrix&)
  Matrix& operator = (Matrix& A)
          ^
antonov/Matrix.cpp:87:10: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
cur.cpp: In member function 'virtual void MatrixTest_Reverse_Test::TestBody()':
cur.cpp:47:7: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
     c = m->reverse();
       ^
cur.cpp:47:7: note: candidate is:
In file included from cur.cpp:16:0:
antonov/Matrix.cpp:87:10: note: Matrix& Matrix::operator=(Matrix&)
  Matrix& operator = (Matrix& A)
          ^
antonov/Matrix.cpp:87:10: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
./check.sh: line 24: ./a.out: No such file or directory
